--- a/pernoite/css/style.css
+++ b/pernoite/css/style.css
@@ -29,3 +29,9 @@ p				{  }
 .sete			{ height: 1555px; background-image: url(../images/07.jpg); background-position: top center; }
 .oito			{ height: 1033px; background-image: url(../images/08.jpg); background-position: top center; }
 .nove			{ height: 1033px; background-image: url(../images/09.jpg); background-position: top center; }
+.dez			{ height: 1033px; background-image: url(../images/10.jpg); background-position: top center; }
+.onze			{ height: 1215px; background-image: url(../images/11.jpg); background-position: top center; }
+.doze			{ height: 975px; background-image: url(../images/12.jpg); background-position: top center; }
+.treze			{ height: 1369px; background-image: url(../images/13.jpg); background-position: top center; }
+.quatorze		{ height: 906px; background-image: url(../images/14.jpg); background-position: top center; }
+.quinze			{ height: 749px; background-image: url(../images/15.jpg); background-position: top center; }
