--- a/pernoite/css/style.css
+++ b/pernoite/css/style.css
@@ -30,8 +30,9 @@ p				{  }
 .oito			{ height: 1033px; background-image: url(../images/08.jpg); background-position: top center; }
 .nove			{ height: 1033px; background-image: url(../images/09.jpg); background-position: top center; }
 .dez			{ height: 1033px; background-image: url(../images/10.jpg); background-position: top center; }
-.onze			{ height: 1215px; background-image: url(../images/11.jpg); background-position: top center; }
-.doze			{ height: 975px; background-image: url(../images/12.jpg); background-position: top center; }
-.treze			{ height: 1369px; background-image: url(../images/13.jpg); background-position: top center; }
+.onze			{ height: 849px; background-image: url(../images/11.jpg); background-position: top center; }
+.doze			{ height: 1218px; background-image: url(../images/12.jpg); background-position: top center; }
+.treze			{ height: 1085px; background-image: url(../images/13.jpg); background-position: top center; }
 .quatorze		{ height: 906px; background-image: url(../images/14.jpg); background-position: top center; }
 .quinze			{ height: 749px; background-image: url(../images/15.jpg); background-position: top center; }
+.dezesseis		{ height: 828px; background-image: url(../images/16.jpg); background-position: top center; }
