Layout Heli Finalizado

--- a/projetos/helifreireg/css/style.css
+++ b/projetos/helifreireg/css/style.css
@@ -21,3 +21,4 @@ p				{  }
 /*total*/
 #total1 			{ width:100%; height:5853px; margin: auto; background-position:top; background-image:url(../images/bg1.jpg); background-repeat:no-repeat; }
 #total2 			{ width:100%; height:2402px; margin: auto; background-position:top; background-image:url(../images/bg2.jpg); background-repeat:no-repeat; }
+#total3 			{ width:100%; height:5853px; margin: auto; background-position:top; background-image:url(../images/bg3.jpg); background-repeat:no-repeat; }
